--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
-.navbar
-    {
-        background-color: black;
-    }   
+
 .nav-link 
     {
         color: #ffffff;  /* Cor da fonte branca */
     }
 .navbar-brand:hover,
-.nav-link:hover 
+.nav-link:hover,
+.dropdown-item:hover
     {
         color: #f1c40f;  /* Cor do texto ao passar o mouse (amarelo) */
     }
@@ -22,4 +20,24 @@
         color: black;
         border-radius: 20px;
         padding: 5px 10px;
-    }    
+    }
+.navbar-nav
+    {
+        width: 100%;
+    }
+.dropdown-toggle::before {
+        display: inline-block;
+        margin-left: .255em;
+        vertical-align: .255em;
+        content: "";
+        border-top: .3em solid;
+        border-right: .3em solid transparent;
+        border-bottom: 0;
+        border-left: .3em solid transparent;
+    }
+.btn 
+{
+    left: auto;
+}
+   
+   
